<resources>
    <string name="app_name">MGJI-Recy</string>
    <string name="developer_name">지명근</string>
    <string name="developer_id">20161185</string>
    <string name="button_more_text">더보기</string>
    <string name="textView_date_default">1997.04.28</string>
    <string name="textView_mealTime_default">알수없음</string>
    <string name="textView_menus_default">알 수 없는 메뉴</string>
    <string name="button_about_text">대하여</string>
    <string name="about_title">금오공대 식단표 파서</string>
    <string name="about_description">금오공과대학교 홈페이지에서 jsoup를 사용해 식단 목록을 파싱해오는 어플리케이션입니다.\n\n
        식당 선택 시 이번주와 지난주의 식단을 가져오며, 아래의 더보기 버튼 클릭 시 이전 식단을 더 가져옵니다.\n\n
        항목을 선택하면 Popup Activity로 확대하여 표시하며, RecyclerView에서 생략됬던 안내사항, 가격 등이 추가로 표시됩니다.\n\n
        또한 금오공과대학교 홈페이지에서 해당 메뉴를 확인하는 하이퍼링크 버튼 또한 제공합니다.\n\n
        인터넷에 연결되어있지 않으면 랜덤한 메뉴를 만들어 표시합니다.\n\n
        인터넷이 연결되어있지만 금오공과대학교에 연결하는데 실패하면 경고창이 표시됩니다.\n\n
        * 이미지는 랜덤으로 표시됩니다.
    </string>

    <string name="popup_imageView_icon">메뉴 이미지</string>
    <string name="popup_button_link_text">웹페이지 바로가기</string>

</resources>
