<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/popup_header_color"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/popup_textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_weight="10"
            android:padding="5dp"
            android:text="@string/textView_date_default"
            android:textAlignment="center"
            android:textColor="@color/popup_header_text_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/popup_textView_mealTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:text="@string/textView_mealTime_default"
            android:textColor="@color/popup_header_text2_color"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/popup_imageView_icon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:contentDescription="@string/popup_imageView_icon"
        android:maxHeight="50dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/unknown" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <TextView
            android:id="@+id/popup_textView_menus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_menus_default"
            android:textAlignment="center" />
    </ScrollView>

    <Button
        android:id="@+id/popup_button_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/popup_button_link_text" />

</LinearLayout>
